bug fix nav bar behind card buttons

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,5 +1,6 @@
 .navbar{
     position: fixed;
+    z-index: 1;
     width: 100%;
     top: 0;
     height: 80px;
